<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.Login"
    android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">
            <!--  logo Label -->
            <ImageView
                android:id="@+id/logo"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/sign_up_icon"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />


            <!--  Name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                 app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ForgetPassword"
               android:layout_gravity="end"
               android:id="@+id/forget_password"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="12dp"
                android:text="@string/Login"
                android:textAppearance="@style/TextAppearance.AppCompat" />


        </LinearLayout>
<LinearLayout
    android:id="@+id/register_layout"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:rotation="-90"
        android:text="@string/Sign_up"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"/>

</LinearLayout>

    </LinearLayout>