<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.ForgetPassword">

    <EditText
        android:autofillHints="@null"
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="554dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/gen_Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"

        android:layout_marginEnd="164dp"

        android:layout_marginBottom="100dp"
        android:background="#E91E63"
        android:text="@string/generate_otp"
        android:textColor="#FBFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="436dp"
        android:cursorVisible="true"
        android:hint="@string/hint"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/colorPrimaryDark"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemRadius="10dp"
        app:itemSpacing="10dp"
        app:itemWidth="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        app:lineColor="@color/colorPrimary"
        app:lineWidth="2dp"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/submit_Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gen_Otp"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="#FBFAFA"
        android:background="#E91E63"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPinView"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        android:focusable="true"

        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="286dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_layout"
        app:layout_constraintVertical_bias="0.100000024"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        android:focusable="true"

        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="341dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forget_btn"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="197dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/okay"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_Otp" />


</androidx.constraintlayout.widget.ConstraintLayout>