<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfile"
    android:background="@color/background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfile"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile"
        app:layout_constraintVertical_bias="0.24000001">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="230dp"
            android:drawableEnd="@drawable/ic_mode_edit_black_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/select_age"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_layout"
        app:layout_constraintVertical_bias="0.172"
        android:drawableEnd="@drawable/ic_mode_edit_black_24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_age"
        app:layout_constraintVertical_bias="0.512" />

    <ImageButton
        android:id="@+id/edit_click_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/colorPrimaryDark"
        android:contentDescription="@string/edit_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
        tools:ignore="DuplicateIds" />


</androidx.constraintlayout.widget.ConstraintLayout>